# template_cxx

./: CMakeLists.txt  Dockerfile  README.md  build.sh
.devcontainer/: devcontainer.json
src/: CMakeLists.txt
